# Sentinel-crypto-agent

./: LICENSE  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt  risk.yml  run.py
core/: __init__.py  api.py  engine.py  risk_manager.py  utils.py
services/static/: dashboard.html
strategies/: __init__.py  base.py  bollingersqueeze.py  donchian20.py  ema20_100.py  ichimokukumo.py  keltnerride.py  macdzerocross.py  rsidivergence.py  sarflip.py  sma50pullback.py  vwappullback.py
tests/: conftest.py  test_api.py  test_engine_consensus.py  test_macdzerocross.py  test_risk_manager.py  test_sarflip.py  test_strategies.py  test_trailing.py  test_utils.py
